V3923: Overall update and fixing. Added P088 for new QE

--- a/Prevu.Synoptics.V3923_Evanses/Details/D018.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D018.xaml
@@ -14,63 +14,33 @@
         <Labels:Pipe Width="74" StatusComponent="018-21-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="98" Canvas.Top="111" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="74" StatusComponent="018-21-CV2" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="160" Canvas.Top="111" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="132" Canvas.Top="126" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="112" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="174" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="107" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="169" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="194" Canvas.Top="126" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
         <Labels:DeviceLabel ComponentName="018-21-CV1" Canvas.Left="17" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="018-21-CV2" Height="50" Canvas.Left="229" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
