--- a/Prevu.Synoptics.V3923_Evanses/Pages/P330.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P330.xaml
@@ -13,40 +13,28 @@
         <Labels:Pipe Width="52" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="1272" Canvas.Top="754" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="52" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="1056" Canvas.Top="767" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="446" Canvas.Top="552" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="340-21-CV1" Canvas.Left="1028" Canvas.Top="550" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -70,7 +58,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="114" StatusComponent="338-01-MA1" PipeHeight="Medium" VisibilityComponent="338-21-CV1" VisibilitySignal="LS1" Canvas.Left="1053" Canvas.Top="537" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="104" StatusComponent="338-01-MA1" PipeHeight="Medium" VisibilityComponent="338-21-CV1" VisibilitySignal="LS1" Canvas.Left="1058" Canvas.Top="542" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -80,7 +68,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="78" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="463" Canvas.Top="769" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="44" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="480" Canvas.Top="786" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -107,7 +95,7 @@
         <Labels:Pipe Width="1146" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="281" Canvas.Top="816" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="156" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="1293" Canvas.Top="777" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="369" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="1077" Canvas.Top="790" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="76" StatusComponent="318-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1067" Canvas.Top="407" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="66" StatusComponent="318-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1072" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -118,7 +106,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="148" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1123" Canvas.Top="527" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="76" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="781" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="58" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="257" Canvas.Top="790" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -150,7 +138,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="76" StatusComponent="308-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="271" Canvas.Top="405" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="72" StatusComponent="308-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="273" Canvas.Top="403" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -182,7 +170,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="558" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="540" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2"/>
         <Labels:Pipe Width="195" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="325" Canvas.Top="527" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="370-25-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="64" StatusComponent="311-DISCHARGE" PipeHeight="Medium" Canvas.Left="1073" Canvas.Top="289" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="58" StatusComponent="311-DISCHARGE" PipeHeight="Medium" Canvas.Left="1076" Canvas.Top="286" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -193,7 +181,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="128" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="1120" Canvas.Top="67" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="68" StatusComponent="316-01-MA1" PipeHeight="Medium" Canvas.Left="1286" Canvas.Top="342" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="60" StatusComponent="316-01-MA1" PipeHeight="Medium" Canvas.Left="1290" Canvas.Top="346" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -250,9 +238,9 @@
         <TextBlock Width="94" Canvas.Top="194" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="668" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S"/><Run Language="it-it" Text="510"/></TextBlock>
         <TextBlock Width="94" Canvas.Top="194" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="787" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S"/><Run Language="it-it" Text="5"/><Run Text="1"/><Run Language="it-it" Text="1"/></TextBlock>
         <Labels:JumpLabel JumpFromLabel="330-MIXER" JumpToLabel="350-01-MA1" Canvas.Left="1410" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="330-MIXER" JumpToLabel="354-HEAT" Canvas.Left="62" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="354-HEAT" Canvas.Left="62" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="300-41-LT1" JumpToLabel="279-21-CV1" Canvas.Left="257" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel JumpFromLabel="300-41-LT1" JumpToLabel="279-21-CV1" Canvas.Left="1046" Canvas.Top="37" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:JumpLabel JumpFromLabel="310-41-LT1" JumpToLabel="279-21-CV1" Canvas.Left="1046" Canvas.Top="37" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DetailsLabel ComponentName="340-VIEW" DetailsPageName="D340" Canvas.Left="1056" Canvas.Top="689" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="345-VIEW" DetailsPageName="D345" Canvas.Left="1272" Canvas.Top="675" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="330-VIEW" DetailsPageName="D330" Canvas.Left="260" Canvas.Top="710" HorizontalAlignment="Left" VerticalAlignment="Center"/>
