--- a/Prevu.Synoptics.V3923_Evanses/Pages/P460.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P460.xaml
@@ -15,7 +15,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="144" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1163" Canvas.Top="456" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="144" Color="Water" StatusComponent="516-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1163" Canvas.Top="456" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -41,14 +41,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="78" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="" Canvas.Left="1169" Canvas.Top="704" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="322" Color="Water" StatusComponent="519-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="767" Canvas.Top="305" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="320" Color="Water" StatusComponent="519-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="768" Canvas.Top="306" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="60" Color="Water" StatusComponent="510-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1073" Canvas.Top="251" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="60" Color="Water" StatusComponent="510-22-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1073" Canvas.Top="251" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -95,15 +95,15 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="158" RenderTransformOrigin="0.5,0.5" StatusComponent="463-01-MA1" Canvas.Left="513" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="158" RenderTransformOrigin="0.5,0.5" StatusComponent="473-01-MA1" Canvas.Left="513" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="170" RenderTransformOrigin="0.5,0.5" StatusComponent="463-01-MA1" Canvas.Left="424" Canvas.Top="329" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="390" RenderTransformOrigin="0.5,0.5" StatusComponent="463-01-MA1" Canvas.Left="231" Canvas.Top="522">
+        <Labels:Pipe Color="Water" Width="170" RenderTransformOrigin="0.5,0.5" StatusComponent="473-01-MA1" Canvas.Left="424" Canvas.Top="329" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="390" RenderTransformOrigin="0.5,0.5" StatusComponent="473-01-MA1" Canvas.Left="231" Canvas.Top="522">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -127,7 +127,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="140" StatusComponent="470-21-CV1" Canvas.Left="240" Canvas.Top="628"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="111" Canvas.Top="758"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="608" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="116" Canvas.Top="156">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="607" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="116" Canvas.Top="156">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -278,7 +278,7 @@
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="460-01-MA1" JumpToLabel="456-01-MA1" Canvas.Top="79" Canvas.Left="20"/>
         <Labels:JumpLabel JumpFromLabel="477-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="994" Canvas.Top="551" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="514-01-MA1" JumpToLabel="527-61-LEV" Canvas.Left="1446" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="519-01-MA1" JumpToLabel="380-23-CV1" Canvas.Left="1133" Canvas.Top="763" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="519-01-MA1" JumpToLabel="380-RINSE" Canvas.Left="1133" Canvas.Top="763" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="474-HEAT" DetailsPageName="D474" Canvas.Left="27" Canvas.Top="489"/>
         <Labels:DetailsLabel ComponentName="510-VALVE" DetailsPageName="D510" Canvas.Left="1214" Canvas.Top="24" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="510-RINSE" DetailsPageName="D510_2" Canvas.Left="968" Canvas.Top="124" HorizontalAlignment="Left" VerticalAlignment="Center"/>
