--- a/Prevu.Synoptics.V3923_Evanses/PlantView.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/PlantView.xaml
@@ -24,8 +24,12 @@
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1062" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1826" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="75" Canvas.Left="595" Canvas.Top="606" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="580" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="820" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1404" Canvas.Top="604" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="211" Canvas.Top="321" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="89" Canvas.Top="321" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="211" Canvas.Top="452" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="020" Canvas.Left="388" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="100" Canvas.Left="388" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="229" Canvas.Left="1067" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -46,7 +50,12 @@
         <Labels:GroupLabel GroupName="230" Canvas.Left="1370" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="460" Canvas.Left="388" Canvas.Top="893" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="430" Canvas.Left="388" Canvas.Top="753" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="061" Canvas.Left="636" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="140" Canvas.Left="876" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="170" Canvas.Left="876" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="088" Canvas.Left="1466" Canvas.Top="753" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="510" Canvas.Left="388" Canvas.Top="961" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="940" Canvas.Left="1193" Canvas.Top="900" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q91" Canvas.Left="1122" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="72" Canvas.Top="203" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q21" Canvas.Left="324" Canvas.Top="83" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -83,20 +92,17 @@
         <Labels:DeviceLabel ComponentName="Q71-POWER" Canvas.Left="699" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q81-POWER" Canvas.Left="1000" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q91-POWER" Canvas.Left="1234" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="940" Canvas.Left="1193" Canvas.Top="900" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="211" Canvas.Top="452" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="HMI-03" Canvas.Left="194" Canvas.Top="404" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="580" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="061" Canvas.Left="636" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q22" Canvas.Left="572" Canvas.Top="83" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="S220" Canvas.Left="624" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q22-POWER" Canvas.Left="684" Canvas.Top="83" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="820" Canvas.Top="141" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="140" Canvas.Left="876" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q31" Canvas.Left="812" Canvas.Top="83" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S310" Canvas.Left="864" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q31-POWER" Canvas.Left="924" Canvas.Top="83" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="170" Canvas.Left="876" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-
+        <Labels:DeviceLabel ComponentName="OEE-POWER" Canvas.Left="129" Canvas.Top="587" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="OEE-WATER" Canvas.Left="129" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q47" Canvas.Left="1397" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="S470" Canvas.Left="1453" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q47-POWER" Canvas.Left="1509" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
