--- a/Prevu.Synoptics.V3923_Evanses/Details/D020.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D020.xaml
@@ -10,123 +10,102 @@
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D020" >
 
-    <Canvas Height="486" Width="657">
-        <Labels:Pipe Width="25" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="40" Canvas.Top="338" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="454" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="134" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="269" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Canvas Height="449" Width="569">
+        <Labels:Pipe Width="143" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="291" Canvas.Top="211" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="146" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="289" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="419" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="44" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="270" Canvas.Top="191">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="210" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="31" Canvas.Top="234" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="61" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="360" Canvas.Top="242"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="364" Canvas.Top="295">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="18" Canvas.Top="360">
+        <Labels:Pipe Width="273" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="58" Canvas.Top="215" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="90" Canvas.Top="338"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="133" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="252" Canvas.Top="291"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="334" Canvas.Top="338">
+        <Labels:Pipe Width="273" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="9" Canvas.Top="225" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="102" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="203" Canvas.Top="340">
+        <Labels:Pipe Color="Water" Width="51" StatusComponent="354-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="79" Canvas.Top="198" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="46" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="409" Canvas.Top="190" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="30" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="210" Canvas.Top="338"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="213" Canvas.Top="360">
-            <Labels:Pipe.RenderTransform>
+        <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="425" Canvas.Top="298" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="411" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="262" Canvas.Top="141" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_WaterPump Canvas.Left="337" Canvas.Top="274" Color="Oil" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <Machines:V01_WaterPump.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
+                    <RotateTransform Angle="-90"/>
                 </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="569" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:V01_EXC_CoolingFan Canvas.Left="343" Canvas.Top="317" Height="30" Width="81" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_CV_Valve Canvas.Left="164" Canvas.Top="316" Height="48" Width="56" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_CV_ValveDouble Canvas.Left="405" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_CV_ValveDouble Canvas.Left="105" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_CV_ValveDouble Canvas.Left="255" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_CV_ValveDouble Canvas.Left="555" Canvas.Top="108" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_AuxHydraulicOilTank Canvas.Left="474" Canvas.Top="413" HorizontalAlignment="Center" Height="44" VerticalAlignment="Top" Width="100"/>
-        <Machines:V01_WaterPump Canvas.Left="504" Canvas.Top="405" Color="Oil" Height="58" Width="40" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_WaterPump Canvas.Left="286" Canvas.Top="272" Color="Oil" Height="45" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_WaterPump Canvas.Left="55" Canvas.Top="318" Color="Oil" Height="45" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle HorizontalAlignment="Center" Height="86" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="22" Canvas.Top="381"/>
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="122" Canvas.Top="406" HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Height="20" RenderTransformOrigin="0.5,0.5">
+            </Machines:V01_WaterPump.RenderTransform>
+        </Machines:V01_WaterPump>
+        <Rectangle HorizontalAlignment="Center" Height="86" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="107" Canvas.Top="351"/>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="228" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Height="20" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:V01_SCW_ScrewConveyor_straight>
-        <Labels:DeviceLabel ComponentName="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="33" Canvas.Top="264"/>
-        <Labels:DeviceLabel ComponentName="020-02-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="265" Canvas.Top="214"/>
-        <Labels:DeviceLabel ComponentName="020-03-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="401" Canvas.Top="257"/>
-        <Labels:DeviceLabel ComponentName="020-04-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="478" Canvas.Top="354"/>
-        <Labels:DeviceLabel ComponentName="020-11-R1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="44" Canvas.Top="398"/>
-        <Labels:DeviceLabel ComponentName="020-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="148" Canvas.Top="265"/>
-        <Labels:DeviceLabel ComponentName="020-22-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="91" Canvas.Top="48"/>
-        <Labels:DeviceLabel ComponentName="020-23-CV1" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="241" Canvas.Top="48"/>
-        <Labels:DeviceLabel ComponentName="020-24-CV1" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="391" Canvas.Top="48"/>
-        <Labels:DeviceLabel ComponentName="020-42-TT1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="241" Canvas.Top="398"/>
-        <Labels:DeviceLabel ComponentName="020-25-CV1" Canvas.Left="541" Canvas.Top="48" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="34" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="180"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="121" Canvas.Top="165" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Machines:EXC_HeatExchanger.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Machines:EXC_HeatExchanger.RenderTransform>
+        </Machines:EXC_HeatExchanger>
+        <Machines:V01_WaterPump Canvas.Left="120" Canvas.Top="274" Color="Oil" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Machines:V01_WaterPump.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="-90"/>
+                </TransformGroup>
+            </Machines:V01_WaterPump.RenderTransform>
+        </Machines:V01_WaterPump>
+        <Rectangle Height="6" Stroke="Black" Width="80" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="129" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="401" Canvas.Top="141" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="020-23-CV1" Canvas.Left="17" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-02-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="17" Canvas.Top="274"/>
+        <Labels:DeviceLabel ComponentName="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="235" Canvas.Top="274"/>
+        <Labels:DeviceLabel ComponentName="020-11-R1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="150" Canvas.Top="368"/>
+        <Labels:DeviceLabel ComponentName="020-42-TT1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="312" Canvas.Top="368"/>
+        <Labels:DeviceLabel ComponentName="020-21-CV1" Canvas.Left="248" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="020-21-PT1" Canvas.Left="248" Canvas.Top="17" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="020-45-CS1" Canvas.Left="451" Canvas.Top="274" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-22-CV1" Canvas.Left="387" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="020-22-PT1" Canvas.Left="387" Canvas.Top="17" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
