--- a/Prevu.Synoptics.V3923_Evanses/Details/D170.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D170.xaml
@@ -13,84 +13,36 @@
         <Labels:Pipe Width="42" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="150" Canvas.Top="164" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="60" StatusComponent="165-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="29" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="60" StatusComponent="168-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="29" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="46" StatusComponent="170-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="42" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="269" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:V01_NT_Belt_wMetalDetector_Diverter Height="154" Width="376" HorizontalAlignment="Center" Canvas.Left="15" VerticalAlignment="Top" Canvas.Top="58" />
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="56" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="359" Canvas.Top="213" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="287" Canvas.Top="213" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="168" Canvas.Top="171" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="44" Canvas.Top="62" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="347" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="275" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="156" Canvas.Top="183" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:Manual_selection Height="86" Width="46" Canvas.Left="103" Canvas.Top="32" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="170-01-MA1" Canvas.Left="33" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="170-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
