--- a/Prevu.Synoptics.V3923_Evanses/Details/D371.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D371.xaml
@@ -16,56 +16,35 @@
         <Labels:Pipe Color="Water" Width="141" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" HorizontalAlignment="Center" Canvas.Left="177" Canvas.Top="198" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="64" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" HorizontalAlignment="Center" Canvas.Left="172" Canvas.Top="372" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="52" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="358-21-CV1" HorizontalAlignment="Left" Canvas.Left="178" Canvas.Top="207" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="136" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="357-21-CV1" HorizontalAlignment="Center" Canvas.Left="157" Canvas.Top="163" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="72" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="357-21-CV1" HorizontalAlignment="Center" Canvas.Left="155" Canvas.Top="97" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="60" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="358-21-CV1" HorizontalAlignment="Center" Canvas.Left="146" Canvas.Top="183" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="50" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="357-21-CV1" HorizontalAlignment="Left" Canvas.Left="177" Canvas.Top="97" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="36" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="358-21-CV1" HorizontalAlignment="Left" Canvas.Left="170" Canvas.Top="183" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Canvas.Left="245" Canvas.Top="129" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Machines:CV_Valve_001 Height="100" Width="102" Color="Water" RenderTransformOrigin="0.51,0.539" HorizontalAlignment="Left" Canvas.Left="282" Canvas.Top="80" VerticalAlignment="Center">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" HorizontalAlignment="Left" Canvas.Left="308" Canvas.Top="106" VerticalAlignment="Top"/>
         <Machines:V01_ACS_Chemical_Dosing Canvas.Left="133" Canvas.Top="229" Height="130" Width="144" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Chemicals" HorizontalAlignment="Left" Canvas.Left="140" Canvas.Top="78" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" HorizontalAlignment="Left" Canvas.Left="140" Canvas.Top="164" VerticalAlignment="Center"/>
