--- a/Prevu.Synoptics.V3923_Evanses/Details/D510_2.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D510_2.xaml
@@ -8,38 +8,20 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-  <Canvas Height="276" Width="415" >
-    <Labels:Pipe Width="64" StatusComponent="510-21-CV1" Color="Oil" Canvas.Left="142" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="51" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="58" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="147" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="150" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="51" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="58" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="113" Canvas.Top="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="132" HorizontalAlignment="Center" VerticalAlignment="Top">
-    <Machines:CV_Valve.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:CV_Valve.RenderTransform>
-    </Machines:CV_Valve>
-    <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="39" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Machines:CV_Valve.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:CV_Valve.RenderTransform>
-    </Machines:CV_Valve>
-    <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_WCE_Centrifuge Canvas.Left="184" Canvas.Top="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="510-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="13" Canvas.Top="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="510-24-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="86" Canvas.Top="15" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="510-23-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="86" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-  </Canvas>
+    <Canvas Height="276" Width="415" >
+        <Labels:Pipe Width="64" StatusComponent="510-21-CV1" Color="Oil" Canvas.Left="142" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="58" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="147" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="150" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="58" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="113" Canvas.Top="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="106" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="106" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="184" Canvas.Top="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="510-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="13" Canvas.Top="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="510-24-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="86" Canvas.Top="15" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="510-23-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="86" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </Canvas>
 </UserControl>
