--- a/Prevu.Synoptics.V3923_Evanses/Pages/P061.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P061.xaml
@@ -13,10 +13,7 @@
         <Labels:Pipe Width="116" StatusComponent="123-01-MA1" Canvas.Left="885" Canvas.Top="110" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -24,71 +21,50 @@
         <Labels:Pipe Width="124" StatusComponent="031-01-MA1" Canvas.Left="282" Canvas.Top="242" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" StatusComponent="061-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="581" Canvas.Top="650" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="48" StatusComponent="061-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="581" Canvas.Top="650" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="061-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="155" StatusComponent="061-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="599" Canvas.Top="705" VisibilityComponent="061-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="80" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="565" Canvas.Top="742" VisibilityComponent="061-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="80" StatusComponent="061-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="565" Canvas.Top="742" VisibilityComponent="061-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="53" StatusComponent="106-01-MA1" Canvas.Left="119" Canvas.Top="657" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="48" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1280" Canvas.Top="651" VisibilityComponent="185-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="48" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1280" Canvas.Top="651" VisibilityComponent="081-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="155" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1298" Canvas.Top="706" VisibilityComponent="081-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="80" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1264" Canvas.Top="743" VisibilityComponent="081-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -96,150 +72,105 @@
         <Labels:Pipe Width="44" StatusComponent="030-01-MA1" Canvas.Left="162" Canvas.Top="158" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="037-01-MA1" Canvas.Left="124" Canvas.Top="375" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="041-01-MA1" Canvas.Left="284" Canvas.Top="503" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="134" StatusComponent="043-01-MA1" Canvas.Left="118" Canvas.Top="642" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="56" StatusComponent="106-01-MA1" Canvas.Left="142" Canvas.Top="683" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="614" StatusComponent="051-01-MA1" Canvas.Left="126" Canvas.Top="409" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="053-01-MA1" Canvas.Left="623" Canvas.Top="170" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="055-01-MA1" Canvas.Left="463" Canvas.Top="304" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="057-01-MA1" Canvas.Left="623" Canvas.Top="432" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="059-01-MA1" Canvas.Left="463" Canvas.Top="558" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="071-01-MA1" Canvas.Left="1026" Canvas.Top="238" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="073-01-MA1" Canvas.Left="866" Canvas.Top="370" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="136" StatusComponent="075-01-MA1" Canvas.Left="1016" Canvas.Top="508" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="96" StatusComponent="079-01-MA1" Canvas.Left="1106" Canvas.Top="668" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="136" StatusComponent="077-01-MA1" Canvas.Left="865" Canvas.Top="642" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -249,10 +180,7 @@
         <Labels:Pipe Width="40" StatusComponent="127-01-MA1" Canvas.Left="908" Canvas.Top="149" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -278,10 +206,7 @@
         <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="515" Canvas.Top="714" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
@@ -291,30 +216,21 @@
         <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1214" Canvas.Top="715" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="1254" Canvas.Top="643" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1279" Canvas.Top="666" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="555" Canvas.Top="642" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="580" Canvas.Top="667" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
