--- a/Prevu.Synoptics.V3923_Evanses/Pages/P170.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P170.xaml
@@ -9,17 +9,12 @@
              x:Class="Prevu.Synoptics.P170" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-
         <Labels:Pipe Width="83" StatusComponent="176-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1097" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-
         <Labels:Pipe Width="85" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="291" Canvas.Top="544" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="98" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="325" Canvas.Top="591" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -28,53 +23,38 @@
         <Labels:Pipe Width="207" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="741" Canvas.Top="292" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="168" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="569" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="134" StatusComponent="191-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="943" Canvas.Top="396" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="169" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="284" Canvas.Top="157"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="127" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="284" Canvas.Top="157"/>
         <Labels:Pipe Width="52" StatusComponent="170-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="866" Canvas.Top="208" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="240" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="615" Canvas.Top="277" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="240" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="615" Canvas.Top="268" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="44" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1249" Canvas.Top="458" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="45" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1201" Canvas.Top="457" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -83,110 +63,80 @@
         <Labels:Pipe Width="62" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="374" Canvas.Top="673" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="61" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1268" Canvas.Top="758" VisibilityComponent="185-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="61" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1339" Canvas.Top="758" VisibilityComponent="185-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="771" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="455" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="771" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="455" Canvas.Top="468" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2" Icon="Left"/>
         <Labels:Pipe Width="176" StatusComponent="161-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="342" Canvas.Top="392" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="87" StatusComponent="162-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="408" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="83" StatusComponent="162-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="449" Canvas.Top="395" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="65" StatusComponent="162-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="449" Canvas.Top="395" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="50" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1269" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Width="238" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1198" Canvas.Top="361" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="196" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1219" Canvas.Top="125" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="132" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="91" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="913" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="406" Canvas.Top="28" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="180" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="203" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="127" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="226" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="83" StatusComponent="163-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="234" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="167" StatusComponent="164-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="9" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="83" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="524" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="84" StatusComponent="174-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="712" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="83" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="902" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="68" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1269" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="55" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1282" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="44" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1313" Canvas.Top="666" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -205,6 +155,7 @@
         <Machines:NT_ConveyorBelt Height="3" Width="133" RenderTransformOrigin="0.5,0.5" Canvas.Left="592" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="127" RenderTransformOrigin="0.5,0.5" Canvas.Left="784" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="135" RenderTransformOrigin="0.5,0.5" Canvas.Left="970" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="131" RenderTransformOrigin="0.5,0.5" Canvas.Left="1170" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="383" Canvas.Top="684" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Manual_selection Height="86" Width="46" Canvas.Left="393" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_GrinderDiverter Canvas.Left="1286" Canvas.Top="674" HorizontalAlignment="Left" VerticalAlignment="Center" Height="81" Width="98"/>
@@ -214,10 +165,7 @@
         <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1208" Canvas.Top="721" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
@@ -241,7 +189,6 @@
         <Labels:DeviceLabel ComponentName="185-21-CV1" Canvas.Left="1368" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="185-71-ECS1" Canvas.Left="1174" Canvas.Top="778" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="185-71-ECS2" Canvas.Left="1397" Canvas.Top="778" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:NT_ConveyorBelt Height="3" Width="131" RenderTransformOrigin="0.5,0.5" Canvas.Left="1170" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="177-01-MA1" Canvas.Left="1219" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
